# scheme-cd-ripper

./: .gitignore  CMakeLists.txt  README.md  README_ja.md  build.sh  build_package.sh  build_package_all.sh  version.h.in
include/cdrip/: cdrip.h
scripts/: build_linux_dist_container.sh
src/: main.cpp
src/cdrip/: album_extractor.cpp  cddb_entries.cpp  config.cpp  cover_art.cpp  disc_toc.cpp  drive_backend.cpp  drive_handle.cpp  drives.cpp  error.cpp  flac_metadata.cpp  format_value.h  http_retry.h  internal.h  replaygain.cpp  rip.cpp  timestamp.cpp  track_tags.cpp
tests/: run.sh  test_activity_observer.cpp  test_activity_observer.sh  test_banner_version.sh  test_build_package.sh  test_build_sh.sh  test_cover_art_selection.cpp  test_cover_art_selection.sh  test_drive_backend.cpp  test_drive_backend.sh  test_musicbrainz_recrawl_filter.cpp  test_musicbrainz_recrawl_filter.sh  test_real_rip_tags.cpp  test_real_rip_tags.sh  test_replaygain.cpp  test_replaygain.sh  test_requery_seed_tags.cpp  test_requery_seed_tags.sh  test_rip_progress_display.cpp  test_rip_progress_display.sh
